--- a/Client/Registration.resx
+++ b/Client/Registration.resx
@@ -117,8 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="trash" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\trash.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIADBAQAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAAQAAAAEAgGAAAAH/P/YQAAAAlw
+        SFlzAAALEwAACxMBAJqcGAAAAXNJREFUOI2Nk71KQ0EQhb97kdyttDCmshARISAKYiFaKTGCvSJaC7HI
+        A1j4ACFJKVrYBVHsLVQEsTBtUuUBrPwphIBY5Vjs3Wxyk4ALww67Z2YOc2YCYUicPLANrAHZ+K0FvAL3
+        wEMfWhhnM8JUhGkLoxHWjjEzLq43uOaBUSIwlUxUc0lcgsrQwNyOtHdo/WjC+surDld2CfLDaUfqHiLp
+        +tb6haJL0BYmjzDVgUCMrSZJj09SZtoni8Z7C1URpt5PPWWt0fQVXfVGM9mL+piVSl1NIIS5WVha9FLt
+        79r74jKhuLII8z1A/+rGU3ZMJGl+IcY4M98hqAUdW0W/8HgHmSlf5PPL+5sb/X/QCiF4hhA6Hfs0lYbj
+        ovXfP+Dk1MPTk/D+BoUjIAB4QZitWJIf7R1YvZ0KruO5HWllzfsW0xYm5wapPChlchoHrCQMYUzuDKh5
+        rkGy24mbGnA+bJlKI6fSL1O5d5mCEeucB9b5xzr/ASNoed+QmZHlAAAAAElFTkSuQmCC
+</value>
   </data>
 </root>
